# podtool

./: .gitignore  Makefile  README.md  flake.nix  podtool.sh  pyproject.toml  result  run.sh
podtool/: main.py  transcribe.py  transcript.py
