[project]
name = "podtool"
version = "1.0.0"
description = "Audio processing and transcript refinement utility"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["podtool"]

[project.scripts]
podtool = "podtool.main:cli"

[tool.poetry.dependencies]
google-cloud-storage = "^2.14.0"
google-cloud-speech = "^2.24.0"